[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Menu Scenes/Main_Menu_Teacher/DetailedReport.gd" type="Script" id=1]
[ext_resource path="res://Resources/fonts/arcade_40.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/fonts/joystix_28.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Button Styles/main_menu_button_disabled.tres" type="StyleBox" id=4]
[ext_resource path="res://Resources/Button Styles/main_menu_button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://Resources/Button Styles/main_menu_button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Resources/Button Styles/main_menu_button_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://Resources/Main GUI Images/BG/BG4.jpg.png" type="Texture" id=8]

[node name="Generate Report" type="Control"]
anchor_top = 0.00262188
anchor_right = 1.0
anchor_bottom = 1.00262
margin_left = 1.25995
margin_top = 2.51984
margin_right = 1.26001
margin_bottom = 2.51984
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 642.035, 355.98 )
texture = ExtResource( 8 )

[node name="GR_gobackBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.119
margin_top = 260.748
margin_right = 108.881
margin_bottom = 329.748
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.083
anchor_top = 0.101
anchor_right = 0.083
anchor_bottom = 0.101
margin_left = -90.9219
margin_top = -75.0381
margin_right = 1150.08
margin_bottom = 509.962
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1241.0
margin_bottom = 41.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 262.0
margin_right = 979.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "Generate  Detailed  Report   Selection"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 1241.0
margin_bottom = 95.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GR_selectW1Btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 618.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = " Requirement Analysis "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GR_selectW2Btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 622.0
margin_right = 1241.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "Requirement Elicitaion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wSelectedLbl" type="Label" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 1241.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "
"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 1241.0
margin_bottom = 259.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 368.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "NAME
----------------"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 372.0
margin_right = 602.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "score
----------"
align = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 606.0
margin_right = 815.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "EASY
-c-|-w-"
align = 1

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 819.0
margin_right = 1028.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "MEDIUM
-c-|-w-"
align = 1

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 1032.0
margin_right = 1241.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
text = "HARD
-c-|-w-"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 263.0
margin_right = 1241.0
margin_bottom = 588.0
rect_min_size = Vector2( 0, 325 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1241.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="nameLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 325.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )

[node name="scoreLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 614.0
margin_bottom = 325.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="easyCorrLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 618.0
margin_right = 718.0
margin_bottom = 325.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1

[node name="easyWrongLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 722.0
margin_right = 823.0
margin_bottom = 325.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1

[node name="medCorrLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 827.0
margin_right = 927.0
margin_bottom = 325.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1

[node name="medWrongLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 931.0
margin_right = 1032.0
margin_bottom = 325.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1

[node name="hardCorrLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 1036.0
margin_right = 1136.0
margin_bottom = 325.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1

[node name="hardWrongLbl" type="Label" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
margin_left = 1140.0
margin_right = 1241.0
margin_bottom = 325.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
align = 1

[node name="ConfirmGR" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.5
margin_top = -71.0
margin_right = 207.5
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="GR_gobackBtn" to="." method="_on_GR_gobackBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GR_selectW1Btn" to="." method="_on_GR_selectW1Btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GR_selectW2Btn" to="." method="_on_GR_selectW2Btn_pressed"]
[connection signal="about_to_show" from="ConfirmGR" to="." method="_on_ConfirmationDialog_about_to_show"]
[connection signal="confirmed" from="ConfirmGR" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
